--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
-    laravel.test:
+    web-app:
         build:
             context: './vendor/laravel/sail/runtimes/8.4'
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: 'sail-8.4/app'
+        container_name: web-app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -26,6 +27,7 @@ services:
             - mailpit
     pgsql:
         image: 'postgres:17'
+        container_name: pgsql
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
         environment:
@@ -51,6 +53,7 @@ services:
             timeout: 5s
     mailpit:
         image: 'axllent/mailpit:latest'
+        container_name: mailpit
         ports:
             - '${FORWARD_MAILPIT_PORT:-1025}:1025'
             - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
@@ -59,6 +62,7 @@ services:
 networks:
     sail:
         driver: bridge
+
 volumes:
     sail-pgsql:
         driver: local
