--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,11 @@ repos:
     hooks:
       - id: ruff
       - id: ruff-format
+  - repo: local
+    hooks:
+      - id: laravel-pint
+        name: Laravel Pint
+        entry: cd laravel && ./vendor/bin/pint
+        args: ["--test"]
+        language: system
+        files: \.(php)$
