--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -30,6 +30,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=root
 
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=password
+FORWARD_MONGODB_PORT=27017
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
