--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Recipe Finder
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -33,6 +33,11 @@ DB_PASSWORD=root
 MONGODB_USERNAME=admin
 MONGODB_PASSWORD=password
 FORWARD_MONGODB_PORT=27017
+MONGODB_DATABASE=recipes_and_ingredients
+
+PIPELINE_EXECUTION_MODE=local
+PIPELINE_DROP_COLLECTION=false
+PIPELINE_APIKEY=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
