--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0"
+        "livewire/volt": "^1.0",
+        "mongodb/laravel-mongodb": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
