--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -6,13 +6,14 @@ APP_TIMEZONE=UTC
 APP_URL=http://localhost
 APP_PORT=3001
 APP_SERVICE='web-app'
+# Change this to 'bigquery' if you want to use BigQuery
+DATABASE_CONNECTION='mongodb'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -75,3 +76,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_CLOUD_PROJECT_ID=your-project-id
+BIGQUERY_DATASET=your_dataset
+BIGQUERY_LOCATION=EU
