--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "google/cloud-bigquery": "^1.31",
         "laravel/framework": "^11.31",
+        "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.0",
