--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Recipe Finder
+APP_NAME=RecipeFinder
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -6,17 +6,13 @@ APP_TIMEZONE=UTC
 APP_URL=http://localhost
 APP_PORT=3001
 APP_SERVICE='web-app'
-# Change this to 'bigquery' if you want to use BigQuery
-DATABASE_CONNECTION='mongodb'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-
 PHP_CLI_SERVER_WORKERS=4
-
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -35,6 +31,12 @@ MONGODB_USERNAME=admin
 MONGODB_PASSWORD=password
 FORWARD_MONGODB_PORT=27017
 MONGODB_DATABASE=recipes_and_ingredients
+FORWARD_MONGODB_HOST=localhost
+
+
+
+
+
 
 PIPELINE_EXECUTION_MODE=local
 PIPELINE_DROP_COLLECTION=false
