--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -40,7 +40,7 @@ FORWARD_MONGODB_HOST=localhost
 
 PIPELINE_EXECUTION_MODE=local
 PIPELINE_DROP_COLLECTION=false
-PIPELINE_APIKEY=
+PIPELINE_APIKEY=example_key
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
